[package]
name = "probably"
version = "0.1.0"
authors = ["Adam Shirey <adam.shirey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "probably"

[dependencies]
bytecount = { version = "0.6", optional = true }
rand = { version = "0.7", optional = true }
siphasher = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }

# For BloomFilter:
bit-vec = "0.4.3"

# For Cuckoo:
byteorder = "1.3.4"
fnv = "1.0.7"
farmhash = {version = "1.1.5", optional = true}
serde_bytes = {version = "0.11.5", optional = true}



[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
with_serde = ["serde/std", "serde_json", "serde_bytes"]
std = ["bytecount", "rand", "siphasher"]
default = ["std"]
