[package]
name = "probably"
version = "0.3.0"
authors = ["Adam Shirey <adam@shirey.ch>"]
edition = "2018"


description = "A library with various approximate computing algorithms"
readme = "README.md"
homepage = "https://github.com/aeshirey/probably/"
repository = "https://github.com/aeshirey/probably/"
license-file = "LICENSE"
keywords = ["approximate", "frequency", "quantile", "membership"]
categories = ["algorithms", "data-structures", "mathematics", "science"]
#exclude = [ ]





# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "probably"

[dependencies]
bytecount = { version = "0.6", optional = true }
rand = { version = "0.7", optional = true }
siphasher = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }

# For BloomFilter:
bit-vec = "0.4.3"

# For Cuckoo:
byteorder = "1.3.4"
fnv = "1.0.7"
farmhash = {version = "1.1.5", optional = true}
serde_bytes = {version = "0.11.5", optional = true}

[dev-dependencies]
# For greenwald_khana, misra_gries, histogram
quickcheck = "0.5"


[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
with_serde = ["serde/std", "serde_json", "serde_bytes"]
std = ["bytecount", "rand", "siphasher"]
default = ["std"]
